src/main/java/com/example/geoserver/error/ogc/LayerNotFoundException.java
package com.example.geoserver.error.ogc;public class LayerNotFoundException {
}
